# pyxt

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
examples/: future_guide.html  future_guide.ipynb  spot_guide.html  spot_guide.ipynb
examples/future/: book_tickers.py  cancel_order.py  depth.py  klines.py  listenkey.py  new_order.py  symbol_info.py
examples/spot/: book_tickers.py  cancel_order.py  depth.py  historical_trades.py  klines.py  listenkey.py  new_order.py  symbol_info.py  tickers.py  trades.py  transfer.py
examples/websocket/: perp_agg_tickers.py  perp_all_ticker.py  perp_depth.py  perp_depth_update.py  perp_fund_rate.py  perp_index_price.py  perp_kline.py  perp_mark_price.py  perp_ticker.py  perp_trade.py  perp_user_balance.py  perp_user_notify.py  perp_user_order.py  perp_user_position.py  perp_user_trade.py  spot_all_ticker.py  spot_incremental _depth.py  spot_kline.py  spot_limit_depth.py  spot_ticker.py  spot_trade.py  spot_user_balance.py  spot_user_order.py  spot_user_trade.py
pyxt/: future.py  perp.py  spot.py
pyxt/websocket/: logger.py  perp.py  spot.py  xt_websocket.py
