[project]
name = "pyxt"
version = "0.0.1"
authors = [
  { name="kx", email="kx@xt.com" },
]
description = "Python3 XT.COM HTTP API Connector"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kelvinxue/pyxt"
Issues = "https://github.com/kelvinxue/pyxt/issues"